tests/invalid_code/if_expr.bs
fn main() {
    if 1 { }
}