tests/invalid_code/if_expr.out
tests/invalid_code/if_expr.bs:2:8: error: non-boolean `if` condition
